clear all outputs

--- a/01_Tensorflow-MNIST for ML beginners.ipynb
+++ b/01_Tensorflow-MNIST for ML beginners.ipynb
@@ -11,14 +11,14 @@
     "\n",
     "\n",
     "### Dependencies\n",
-    " - python3.6\n",
+    " - python 3.5, 3.6\n",
     " - tensorflow 1.2\n",
-    " - tqdm (pip install tqdm)\n"
+    " - tqdm (pip install tqdm): visualization tools for a loop\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -31,20 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)"
    ]
@@ -55,17 +44,14 @@
    "source": [
     "## Create simple linear classifier\n",
     "-----------------------------------\n",
-    "28 * 28 MNIST Image, first dimension is 'None',  \n",
-    "because we feed a batch of images (mini-batch) to our classification layer.  \n",
-    "Tensorflow will change dimension to multifly matirx onto this input batch.  \n",
-    "It's called 'broadcasting'\n",
+    "28 x 28 MNIST Image, first dimension is **'None'**, because we feed a batch of images (mini-batch) to our classification layer. Tensorflow will change dimension to multifly matirx onto this input batch. It's called **'broadcasting.'**\n",
     "\n",
     "https://www.tensorflow.org/performance/xla/broadcasting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +68,10 @@
    "source": [
     "### Softmax function\n",
     "----------------------------------\n",
-    "https://en.wikipedia.org/wiki/Softmax_function\n",
+    "https://en.wikipedia.org/wiki/Softmax_function  \n",
+    "http://eli.thegreenplace.net/2016/the-softmax-function-and-its-derivative/\n",
+    "\n",
+    "\n",
     "\n",
     "\\begin{equation*}\n",
     "\\begin{split}\n",
@@ -94,17 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensor(\"Softmax:0\", shape=(?, 10), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = tf.nn.softmax(tf.matmul(x, W) + b)\n",
     "print(y)"
@@ -116,14 +97,13 @@
    "source": [
     "## Define cross entropy\n",
     "------------------------------\n",
-    "https://en.wikipedia.org/wiki/Cross_entropy\n",
     "\n",
-    "Entropy\n",
+    "[The entropy](https://en.wikipedia.org/wiki/Entropy_(information_theory) is defined as follows:\n",
     "\\begin{equation*}\n",
     "H(\\boldsymbol{p}) = -\\sum \\boldsymbol{p}\\log{\\boldsymbol{p}} \\\\\n",
     "\\end{equation*}\n",
     "\n",
-    "Cross entropy\n",
+    "[The cross entropy](https://en.wikipedia.org/wiki/Cross_entropy) is defined as follows:\n",
     "\\begin{equation*}\n",
     "\\begin{split}\n",
     "H(\\boldsymbol{p},\\boldsymbol{q}) & = H(P) + D_{KL}(\\boldsymbol{p}||\\boldsymbol{q}) \\\\\n",
@@ -139,6 +119,9 @@
    "source": [
     "## Define loss\n",
     "-----------------------------\n",
+    "We define our loss function using the cross entropy as follows:\n",
+    "\n",
+    "\n",
     "\\begin{equation*}\n",
     "L = -\\frac{1}{N}\\sum \\boldsymbol{y'}\\log{\\boldsymbol{y}}\n",
     "  \\qquad \\textrm{where} \\ N \\ \\textrm{is size of mini-batch}\n",
@@ -147,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -177,19 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensor(\"Placeholder_1:0\", shape=(?, 10), dtype=float32)\n",
-      "Tensor(\"Neg:0\", shape=(?,), dtype=float32)\n",
-      "Tensor(\"Mean:0\", shape=(), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Note the tensor shapes\n",
     "print(y_)\n",
@@ -206,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -238,47 +211,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's train!"
+    "## Let's check our variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be22f53df25341c4acecc08b9f4dfe41"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for _ in tqdm(range(1000)):\n",
-    "    images, labels = mnist.train.next_batch(128) # get mini-batch images and corresponding labels\n",
-    "    sess.run(optimizer, feed_dict={x: images, y_: labels})"
+    "print('W: \\n', W.eval()) # randomly initialized\n",
+    "print('b: \\n', b.eval()) # zero constant"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## evaluate our model"
+    "## Let's train!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for iteration in tqdm(range(1000)):\n",
+    "    images, labels = mnist.train.next_batch(128) # get mini-batch images and corresponding labels\n",
+    "    _, loss = sess.run([optimizer, L], feed_dict={x: images, y_: labels})\n",
+    "    \n",
+    "    if iteration % 100 == 0:\n",
+    "        print (\"iter : {:4d},  loss: {:.5f}\".format(iteration, loss))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate our model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -290,72 +266,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9209\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(sess.run(accuracy, feed_dict={x: mnist.test.images, y_: mnist.test.labels}))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.04298268, -0.00520787, -0.03291936, ...,  0.00568776,\n",
-       "        -0.04828663,  0.01818345],\n",
-       "       [-0.05319693,  0.05488672,  0.02772415, ...,  0.09843419,\n",
-       "        -0.00537233, -0.06864445],\n",
-       "       [ 0.04682956,  0.08482439, -0.09622722, ..., -0.0853005 ,\n",
-       "        -0.00257616, -0.09722564],\n",
-       "       ..., \n",
-       "       [-0.02836733,  0.06304901, -0.07991686, ...,  0.01970718,\n",
-       "        -0.09005542, -0.0028522 ],\n",
-       "       [ 0.02615906, -0.02544034,  0.06845229, ..., -0.07427039,\n",
-       "         0.07561996,  0.0466641 ],\n",
-       "       [ 0.01169886, -0.01846943,  0.04258705, ..., -0.05760248,\n",
-       "        -0.08985155, -0.08340633]], dtype=float32)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "W.eval()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.34494323,  0.35730207,  0.09391858, -0.28978905, -0.00995228,\n",
-       "        1.29448557, -0.0966873 ,  0.62683249, -1.41084206, -0.2203224 ], dtype=float32)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.eval()"
+    "# after training\n",
+    "print('W: \\n', W.eval()) \n",
+    "print('b: \\n', b.eval()) "
    ]
   }
  ],
