rearrange 1,2,3\ 1. MNIST basic \ 2. Tensorflow basic \ 3. MNIST conv

--- a/01_Tensorflow-MNIST for ML beginners.ipynb
+++ b/01_Tensorflow-MNIST for ML beginners.ipynb
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)"
@@ -84,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y = tf.nn.softmax(tf.matmul(x, W) + b)\n",
@@ -161,7 +165,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Note the tensor shapes\n",
@@ -217,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('W: \\n', W.eval()) # randomly initialized\n",
@@ -234,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for iteration in tqdm(range(1000)):\n",
@@ -267,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(sess.run(accuracy, feed_dict={x: mnist.test.images, y_: mnist.test.labels}))"
@@ -276,7 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# after training\n",
