--- a/01_Tensorflow-MNIST for ML beginners.ipynb
+++ b/01_Tensorflow-MNIST for ML beginners.ipynb
@@ -103,18 +103,28 @@
     "------------------------------\n",
     "\n",
     "[The entropy](https://en.wikipedia.org/wiki/Entropy_(information_theory) is defined as follows:\n",
+    "\n",
+    "\n",
+    "\n",
     "\\begin{equation*}\n",
     "H(\\boldsymbol{p}) = -\\sum \\boldsymbol{p}\\log{\\boldsymbol{p}} \\\\\n",
     "\\end{equation*}\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "[The cross entropy](https://en.wikipedia.org/wiki/Cross_entropy) is defined as follows:\n",
+    "\n",
+    "\n",
+    "\n",
     "\\begin{equation*}\n",
     "\\begin{split}\n",
     "H(\\boldsymbol{p},\\boldsymbol{q}) & = H(P) + D_{KL}(\\boldsymbol{p}||\\boldsymbol{q}) \\\\\n",
     "& = -\\sum \\boldsymbol{p}\\log{\\boldsymbol{p}} + \\sum \\boldsymbol{p} \\log{\\frac{\\boldsymbol{p}}{\\boldsymbol{q}}} \\\\\n",
     "& = -\\sum \\boldsymbol{p} \\log(\\boldsymbol{q})\n",
     "\\end{split}\n",
-    "\\end{equation*}"
+    "\\end{equation*}\n",
+    "\n"
    ]
   },
   {
