--- a/01_Tensorflow-MNIST for ML beginners.ipynb
+++ b/01_Tensorflow-MNIST for ML beginners.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "\\begin{equation*}\n",
     "L = -\\frac{1}{N}\\sum \\boldsymbol{y'}\\log{\\boldsymbol{y}}\n",
-    "  \\qquad \\textrm{where} \\ N \\ \\textrm{is size of mini-batch}\n",
+    "  \\qquad \\textrm{where} \\ N \\ \\textrm{is}\\ size of mini-batch}\n",
     "\\end{equation*}\n"
    ]
   },
