--- a/01_Tensorflow-MNIST for ML beginners.ipynb
+++ b/01_Tensorflow-MNIST for ML beginners.ipynb
@@ -137,8 +137,7 @@
     "\n",
     "\n",
     "\\begin{equation*}\n",
-    "L = -\\frac{1}{N}\\sum \\boldsymbol{y^\\prime}\\log{\\boldsymbol{y}}\n",
-    "  \\qquad \\textrm{where} \\ N \\ \\textrm{is}\\ \\textrm{size}\\ \\textrm{of}\\ \\textrm{mini-batch}\n",
+    "L = -\\frac{1}{N}\\sum \\boldsymbol{y^\\prime}\\log{\\boldsymbol{y}}\\qquad\\textrm{where}\\ N\\ \\textrm{is}\\ \\textrm{size}\\ \\textrm{of}\\ \\textrm{mini-batch}\n",
     "\\end{equation*}\n"
    ]
   },
